# holon-agentic-coder-ref

./: .gitignore  README.md  holon  localize_docs.py  orchestrate_intent.py  pyproject.toml  test_holon_bootstrap.sh
.github/workflows/: build-images.yml  ci.yml  integration-tests.yml  lint-docs.yml
app/: README.md
app/core/: __init__.py  executor.py  intent.py  ledger.py  planner.py  test_executor.py  test_intent.py  test_ledger.py  test_planner.py
app/scripts/: intent_bootstrap_cli.json
apps/sandbox-executor/: Dockerfile  build_all_images.sh  pyproject.toml
apps/sandbox-executor/src/sandbox_executor/entrypoints/: executor.py  intent_creator.py  planner.py  role_dispatcher.sh
apps/sandbox-executor/tests/: test_executor.py  test_intent_creator.py  test_intent_creator_integration.py  test_planner.py  test_planner_integration.py
docker/: Dockerfile  build_all_images.sh
docker/files/entrypoints/: planner.sh
docs/: agent_design.md  agents.md  appendix.md  architecture.md  core_concepts.md  directory_structure.md  examples.md  faq.md  git_flow.md  knowledge_sharing.md  knowledgebase_schema.md  ledger_schema.md  metrics.md  planning_and_evaluation.md  safety.md  wisdombase_schema.md
docs/agent_selection/: observations_and_decision.md
docs/agent_selection/logs/claude-code/: 01-claude_code.raw  02-claude_code.raw  03-claude_code.raw  start.md
docs/agent_selection/logs/gemini-cli/: 01-gemini_cli.raw  02-gemin_cli.raw  start.md
docs/agent_selection/logs/openai-codex/: 01-openai_codex.raw  start.md
docs/agent_selection/logs/opencode/: 01-opencode.raw  02-opencode.raw  start.md
docs/agent_selection/logs/pi-coding-agent/: 01-pi.raw  02-pi.raw  start.md
docs/intent/: intent_markdown_spec.md
docs/local_llm/: benchmark.md
docs/planner/: agent_credentials_requirements.md  planning_architecture_specification.md
docs/sandbox/: create_intent.md  create_plan.md
docs/testing/: testing_guide.md
holon-config/world/: constraints.md  ruleset.md
holon-knowledge/ledger/: intents.jsonl  plans.jsonl
intents/: README.md
plans/: P-1772691044-pi-coding-agent-abacus_claude-opus-4-6.md  P-1772691045-opencode-opencode_big-pickle.md  P-1772691068-openai-codex-gpt-5.3-codex.md  P-1772691425-openai-codex-gpt-5.3-codex.md  P-1772691637-openai-codex-gpt-5.1-codex-max.md  P-1772691637-openai-codex-gpt-5.1-codex-mini.md  P-1772691637-openai-codex-gpt-5.2-codex.md  P-1772691637-openai-codex-gpt-5.2.md  P-1772691637-openai-codex-gpt-5.3-codex.md  P-1772691637-opencode-opencode_big-pickle.md  P-1772691663-gemini-cli-gemini-3.1-pro-preview.md  P-1772691718-opencode-opencode_big-pickle.md  P-1782734399-antigravity-agent-gemini-2.0-flash.md  P-1782735221-antigravity-agent-gemini-2.0-flash.md
prompts/: planner.template.md  run_planner.sh
tmp/: doc_improvements.md  initial_process.md
world/: ruleset.md
