[project]
name = "holon-agentic-coder"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "sandbox-executor",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "taskipy==1.14.1",
]

[workspace]
members = [
    "apps/sandbox-executor",
]

[tool.uv.sources]
sandbox-executor = { path = "apps/sandbox-executor" }

[tool.taskipy.tasks]
clean = 'find . -type d \( -name "__pycache__" -o -name ".pytest_cache" -o -name "*.egg-info" -o -name "build" -o -name "dist" \) -not -path "*/.venv/*" -exec rm -rf {} + && rm -rf .venv'

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]
