[project]
name = "holon-agentic-coder"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "sandbox-executor",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "taskipy==1.14.1",
    "ruff==0.15.20",
]

[workspace]
members = [
    "apps/sandbox-executor",
]

[tool.uv.sources]
sandbox-executor = { path = "apps/sandbox-executor" }

[tool.taskipy.tasks]
clean = 'find . -type d \( -name "__pycache__" -o -name ".pytest_cache" -o -name "*.egg-info" -o -name "build" -o -name "dist" \) -not -path "*/.venv/*" -exec rm -rf {} + && rm -rf .venv'
lint = "ruff check ."
format = "ruff format ."

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort (import sorting)
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = []
