# NOTE: If we ever need to build artifacts (wheels) for this package, the build system should be hatchling
# and configured as follows:
#
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/sandbox_executor"]

[project]
name = "sandbox-executor"
version = "0.1.0"
description = "Isolated Docker-based executor environment for Holon Agent"
